Make sure the documentation site gets the same scrollbars

--- a/docs/assets/less/stacks-documentation.less
+++ b/docs/assets/less/stacks-documentation.less
@@ -213,19 +213,19 @@
         // Don't use the mixin since we want our scrollbar colors to remain fixed
         // since the background also remains fixed.
         &::-webkit-scrollbar {
-            width: @su8;
-            height: @su8;
+            width: @su12 - @su2;
+            height: @su12 - @su2;
             background-color: transparent;
         }
 
         &::-webkit-scrollbar-track {
-            border-radius: @su8;
+            border-radius: @su12 - @su2;
             background-color: transparent;
         }
 
         &::-webkit-scrollbar-thumb
         {
-            border-radius: @su8;
+            border-radius: @su12 - @su2;
             background-color: rgba(255, 255, 255, .2);
         }
 
@@ -234,7 +234,6 @@
         }
 
         scrollbar-color: rgba(255, 255, 255, .2) transparent;
-        scrollbar-width: thin;
 
         pre,
         code {
